'Fix' tables and broken images on mobile

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -538,7 +538,7 @@ table, td, th {
     padding: 0 0.3em;
     overflow: auto;
 }
-@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px)  {
+/* @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px)  {
     table, thead, tbody, th, td, tr {
         display: block;
     }
@@ -566,7 +566,7 @@ table, td, th {
     table#data-values tbody tr td:nth-of-type(1):before { content: "Name"; }
     table#data-values tbody tr td:nth-of-type(2):before { content: "{% include mcwiki.html url="Namespaced_ID" title="Namespaced ID" %}"; }
     table#data-values tbody tr td:nth-of-type(3):before { content: "Translation Key"; }
-}
+} */
 td.breaking-drop-yes {
     background-color: #C6EFCE;
     color: #006100;
@@ -660,4 +660,27 @@ img.broken:after {
     font-style: italic;
     font-weight: normal;
     color: rgb(185, 185, 185);
+}
+
+@media (pointer:none), (pointer:coarse) {
+    table {
+        display: none;
+    }
+    table:after {
+        content: "Tables are not supported on mobile";
+        display: block;
+    }
+    img.broken {
+        scale: 0;
+        width: 80%;
+        content: "";
+    }
+    img.broken:before {
+        content: "";
+        display: block;
+    }
+    img.broken:after {
+        content: "";
+        display: block;
+    }
 }
